move code base to 1.5 - phase 1 - add generics
git-svn-id: https://svn.apache.org/repos/asf/jakarta/bcel/trunk@1149459 13f79535-47bb-0310-9956-ffa450edef68