@@ -21,6 +21,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -86,7 +87,7 @@ public class Subroutines{
 		private int localVariable = UNSET;
 
 		/** The instructions that belong to this subroutine. */
-		private Set instructions = new HashSet(); // Elements: InstructionHandle
+		private Set<InstructionHandle> instructions = new HashSet<InstructionHandle>(); // Elements: InstructionHandle
 		
 		/*
 		 * Refer to the Subroutine interface for documentation.
@@ -99,7 +100,7 @@ public class Subroutines{
 		 * The JSR or JSR_W instructions that define this
 		 * subroutine by targeting it.
 		 */
-		private Set theJSRs = new HashSet();
+		private Set<InstructionHandle> theJSRs = new HashSet<InstructionHandle>();
 		
 		/**
 		 * The RET instruction that leaves this subroutine.
@@ -141,10 +142,10 @@ public class Subroutines{
 			if (localVariable == UNSET){
 				throw new AssertionViolatedException("setLeavingRET() called for top-level 'subroutine' or forgot to set local variable first.");
 			}
-			Iterator iter = instructions.iterator();
+			Iterator<InstructionHandle> iter = instructions.iterator();
 			InstructionHandle ret = null;
 			while(iter.hasNext()){
-				InstructionHandle actual = (InstructionHandle) iter.next();
+				InstructionHandle actual = iter.next();
 				if (actual.getInstruction() instanceof RET){
 					if (ret != null){
 						throw new StructuralCodeConstraintException("Subroutine with more then one RET detected: '"+ret+"' and '"+actual+"'.");
@@ -171,7 +172,7 @@ public class Subroutines{
 				throw new AssertionViolatedException("getLeavingRET() called on top level pseudo-subroutine.");
 			}
 			InstructionHandle[] jsrs = new InstructionHandle[theJSRs.size()];
-			return (InstructionHandle[]) (theJSRs.toArray(jsrs));
+			return theJSRs.toArray(jsrs);
 		}
 	
 		/**
@@ -210,7 +211,7 @@ public class Subroutines{
 		 */
 		public InstructionHandle[] getInstructions(){
 			InstructionHandle[] ret = new InstructionHandle[instructions.size()];
-			return (InstructionHandle[]) instructions.toArray(ret);
+			return instructions.toArray(ret);
 		}
 		
 		/*
@@ -227,18 +228,18 @@ public class Subroutines{
 
 		/* Satisfies Subroutine.getRecursivelyAccessedLocalsIndices(). */
 		public int[] getRecursivelyAccessedLocalsIndices(){
-			Set s = new HashSet();
+			Set<Integer> s = new HashSet<Integer>();
 			int[] lvs = getAccessedLocalsIndices();
 			for (int j=0; j<lvs.length; j++){
-				s.add(new Integer(lvs[j]));
+				s.add(Integer.valueOf(lvs[j]));
 			}
 			_getRecursivelyAccessedLocalsIndicesHelper(s, this.subSubs());
 			int[] ret = new int[s.size()];
-			Iterator i = s.iterator();
+			Iterator<Integer> i = s.iterator();
 			int j=-1;
 			while (i.hasNext()){
 				j++;
-				ret[j] = ((Integer) i.next()).intValue();
+				ret[j] = i.next().intValue();
 			}
 			return ret;
 		}
@@ -247,7 +248,7 @@ public class Subroutines{
 		 * A recursive helper method for getRecursivelyAccessedLocalsIndices().
 		 * @see #getRecursivelyAccessedLocalsIndices()
 		 */
-		private void _getRecursivelyAccessedLocalsIndicesHelper(Set s, Subroutine[] subs){
+		private void _getRecursivelyAccessedLocalsIndicesHelper(Set<Integer> s, Subroutine[] subs){
 			for (int i=0; i<subs.length; i++){
 				int[] lvs = subs[i].getAccessedLocalsIndices();
 				for (int j=0; j<lvs.length; j++){
@@ -264,60 +265,64 @@ public class Subroutines{
 		 */
 		public int[] getAccessedLocalsIndices(){
 			//TODO: Implement caching.
-			Set acc = new HashSet();
+			Set<Integer> acc = new HashSet<Integer>();
 			if (theRET == null && this != TOPLEVEL){
 				throw new AssertionViolatedException("This subroutine object must be built up completely before calculating accessed locals.");
 			}
-			Iterator i = instructions.iterator();
-			while (i.hasNext()){
-				InstructionHandle ih = (InstructionHandle) i.next();
-				// RET is not a LocalVariableInstruction in the current version of BCEL.
-				if (ih.getInstruction() instanceof LocalVariableInstruction || ih.getInstruction() instanceof RET){
-					int idx = ((IndexedInstruction) (ih.getInstruction())).getIndex();
-					acc.add(new Integer(idx));
-					// LONG? DOUBLE?.
-					try{
-						// LocalVariableInstruction instances are typed without the need to look into
-						// the constant pool.
-						if (ih.getInstruction() instanceof LocalVariableInstruction){
-							int s = ((LocalVariableInstruction) ih.getInstruction()).getType(null).getSize();
-							if (s==2) {
-                                acc.add(new Integer(idx+1));
-                            }
-						}
-					}
-					catch(RuntimeException re){
-						throw new AssertionViolatedException("Oops. BCEL did not like NULL as a ConstantPoolGen object.", re);
-					}
-				}
+			{
+    			Iterator<InstructionHandle> i = instructions.iterator();
+    			while (i.hasNext()){
+    				InstructionHandle ih = i.next();
+    				// RET is not a LocalVariableInstruction in the current version of BCEL.
+    				if (ih.getInstruction() instanceof LocalVariableInstruction || ih.getInstruction() instanceof RET){
+    					int idx = ((IndexedInstruction) (ih.getInstruction())).getIndex();
+    					acc.add(new Integer(idx));
+    					// LONG? DOUBLE?.
+    					try{
+    						// LocalVariableInstruction instances are typed without the need to look into
+    						// the constant pool.
+    						if (ih.getInstruction() instanceof LocalVariableInstruction){
+    							int s = ((LocalVariableInstruction) ih.getInstruction()).getType(null).getSize();
+    							if (s==2) {
+                                    acc.add(new Integer(idx+1));
+                                }
+    						}
+    					}
+    					catch(RuntimeException re){
+    						throw new AssertionViolatedException("Oops. BCEL did not like NULL as a ConstantPoolGen object.", re);
+    					}
+    				}
+    			}
 			}
 			
-			int[] ret = new int[acc.size()];
-			i = acc.iterator();
-			int j=-1;
-			while (i.hasNext()){
-				j++;
-				ret[j] = ((Integer) i.next()).intValue();
+			{
+    			int[] ret = new int[acc.size()];
+    			Iterator<Integer> i = acc.iterator();
+    			int j=-1;
+    			while (i.hasNext()){
+    				j++;
+    				ret[j] = i.next().intValue();
+    			}
+    			return ret;
 			}
-			return ret;
 		}
 
 		/*
 		 * Satisfies Subroutine.subSubs().
 		 */
 		public Subroutine[] subSubs(){
-			Set h = new HashSet();
+			Set<Subroutine> h = new HashSet<Subroutine>();
 
-			Iterator i = instructions.iterator();
+			Iterator<InstructionHandle> i = instructions.iterator();
 			while (i.hasNext()){
-				Instruction inst = ((InstructionHandle) i.next()).getInstruction();
+				Instruction inst = i.next().getInstruction();
 				if (inst instanceof JsrInstruction){
 					InstructionHandle targ = ((JsrInstruction) inst).getTarget();
 					h.add(getSubroutine(targ));
 				}
 			}
 			Subroutine[] ret = new Subroutine[h.size()];
-			return (Subroutine[]) h.toArray(ret);
+			return h.toArray(ret);
 		}
 		
 		/*
@@ -353,7 +358,7 @@ public class Subroutines{
 	 * Key: InstructionHandle of the leader of the subroutine.
 	 * Elements: SubroutineImpl objects.
 	 */
-	private Map subroutines = new HashMap();
+	private Map<InstructionHandle, Subroutine> subroutines = new HashMap<InstructionHandle, Subroutine>();
 
 	/**
 	 * This is referring to a special subroutine, namely the
@@ -377,7 +382,7 @@ public class Subroutines{
 		TOPLEVEL = new SubroutineImpl();
 
 		// Calculate "real" subroutines.
-		Set sub_leaders = new HashSet(); // Elements: InstructionHandle
+		Set<InstructionHandle> sub_leaders = new HashSet<InstructionHandle>(); // Elements: InstructionHandle
 		for (int i=0; i<all.length; i++){
 			Instruction inst = all[i].getInstruction();
 			if (inst instanceof JsrInstruction){
@@ -386,10 +391,10 @@ public class Subroutines{
 		}
  
 		// Build up the database.
-		Iterator iter = sub_leaders.iterator();
+		Iterator<InstructionHandle> iter = sub_leaders.iterator();
 		while (iter.hasNext()){
 			SubroutineImpl sr = new SubroutineImpl();
-			InstructionHandle astore = (InstructionHandle) (iter.next());
+			InstructionHandle astore = iter.next();
 			sr.setLocalVariable( ((ASTORE) (astore.getInstruction())).getIndex() );
 			subroutines.put(astore, sr);
 		}
@@ -413,21 +418,21 @@ public class Subroutines{
 		
 		// Now do a BFS from every subroutine leader to find all the
 		// instructions that belong to a subroutine.
-		Set instructions_assigned = new HashSet(); // we don't want to assign an instruction to two or more Subroutine objects.
+		Set<InstructionHandle> instructions_assigned = new HashSet<InstructionHandle>(); // we don't want to assign an instruction to two or more Subroutine objects.
 		
-		Map colors = new HashMap(); //Graph colouring. Key: InstructionHandle, Value: Integer .
+		Map<InstructionHandle, Integer> colors = new HashMap<InstructionHandle, Integer>(); //Graph colouring. Key: InstructionHandle, Value: Integer .
 		
 		iter = sub_leaders.iterator();
 		while (iter.hasNext()){
 			// Do some BFS with "actual" as the root of the graph.
-			InstructionHandle actual = (InstructionHandle) (iter.next());
+			InstructionHandle actual = iter.next();
 			// Init colors
 			for (int i=0; i<all.length; i++){
 				colors.put(all[i], WHITE);
 			}
 			colors.put(actual, GRAY);
 			// Init Queue
-			ArrayList Q = new ArrayList();
+			List<InstructionHandle> Q = new ArrayList<InstructionHandle>();
 			Q.add(actual); // add(Obj) adds to the end, remove(0) removes from the start.
 			
 			/* BFS ALGORITHM MODIFICATION: Start out with multiple "root" nodes, as exception handlers are starting points of top-level code, too. [why top-level? TODO: Refer to the special JustIce notion of subroutines.]*/
@@ -441,10 +446,10 @@ public class Subroutines{
 			
 			// Loop until Queue is empty
 			while (Q.size() != 0){
-				InstructionHandle u = (InstructionHandle) Q.remove(0);
+				InstructionHandle u = Q.remove(0);
 				InstructionHandle[] successors = getSuccessors(u);
 				for (int i=0; i<successors.length; i++){
-					if (((Integer) colors.get(successors[i])) == WHITE){
+					if (colors.get(successors[i]) == WHITE){
 						colors.put(successors[i], GRAY);
 						Q.add(successors[i]);
 					}
@@ -473,9 +478,9 @@ public class Subroutines{
 		for (int i=0; i<handlers.length; i++){
 			InstructionHandle _protected = handlers[i].getStartPC();
 			while (_protected != handlers[i].getEndPC().getNext()){// Note the inclusive/inclusive notation of "generic API" exception handlers!
-				Iterator subs = subroutines.values().iterator();
+				Iterator<Subroutine> subs = subroutines.values().iterator();
 				while (subs.hasNext()){
-					Subroutine sub = (Subroutine) subs.next();
+					Subroutine sub = subs.next();
 					if (sub != subroutines.get(all[0])){	// We don't want to forbid top-level exception handlers.
 						if (sub.contains(_protected)){
 							throw new StructuralCodeConstraintException("Subroutine instruction '"+_protected+"' is protected by an exception handler, '"+handlers[i]+"'. This is forbidden by the JustIce verifier due to its clear definition of subroutines.");
@@ -492,7 +497,7 @@ public class Subroutines{
 		// This includes that subroutines may not call themselves
 		// recursively, even not through intermediate calls to other
 		// subroutines.
-		noRecursiveCalls(getTopLevel(), new HashSet());
+		noRecursiveCalls(getTopLevel(), new HashSet<Integer>());
 
 	}
 
@@ -507,7 +512,7 @@ public class Subroutines{
 	 *
 	 * @throws StructuralCodeConstraintException if the above constraint is not satisfied.
 	 */
-	private void noRecursiveCalls(Subroutine sub, Set set){
+	private void noRecursiveCalls(Subroutine sub, Set<Integer> set){
 		Subroutine[] subs = sub.subSubs();
 
 		for (int i=0; i<subs.length; i++){
@@ -534,7 +539,7 @@ public class Subroutines{
 	 * @see #getTopLevel()
 	 */
 	public Subroutine getSubroutine(InstructionHandle leader){
-		Subroutine ret = (Subroutine) subroutines.get(leader);
+		Subroutine ret = subroutines.get(leader);
 		
 		if (ret == null){
 			throw new AssertionViolatedException("Subroutine requested for an InstructionHandle that is not a leader of a subroutine.");
@@ -559,9 +564,9 @@ public class Subroutines{
 	 * @see #getTopLevel()
 	 */
 	public Subroutine subroutineOf(InstructionHandle any){
-		Iterator i = subroutines.values().iterator();
+		Iterator<Subroutine> i = subroutines.values().iterator();
 		while (i.hasNext()){
-			Subroutine s = (Subroutine) i.next();
+			Subroutine s = i.next();
 			if (s.contains(any)) {
                 return s;
             }
